<resources>
    <string name="app_name">Passenger</string>
    <string name="passenger_name">محمد مسعود کامرانی گهرمان</string>
    <string name="wallet_title">کیف پول</string>
    <string name="trips_title">سفرها</string>
    <string name="transaction_title">گردش حساب</string>
    <string name="open">open drawer</string>
    <string name="close">close drawer</string>
    <string name="et_origin">مبدا را وارد کنید :</string>
    <string name="et_destination">مقصد را وارد کنید :</string>
    <string name="et_date">تاریخ حرکت را وارد کنید :</string>
    <string name="et_time">ساعت حرکت را وارد کنید :</string>
    <string name="search_activity_label">جستجوی سفر</string>
    <string name="search_trips_fragment_title">جستجوی سفر</string>
    <string name="registered_trips_fragment_title">سفرهای رزرو شده</string>
    <string name="btn_search_trips">جستجوی سفر</string>
    <string name="tv_origin">همدان</string>
    <string name="tv_to">به</string>
    <string name="tv_destination">ملایر</string>
    <string name="tv_date_time_movement">زمان حرکت </string>
    <string name="tv_date_movement">1398/05/3</string>
    <string name="tv_time_movement">8:30</string>
    <string name="tv_trip_number">کد سفر </string>
    <string name="tv_trip_id">1234</string>
    <string name="tv_cancel">لغو سفر !!!</string>
    <string name="tv_cancel_question">آیا مطمعن به لغو سفر هستید ؟</string>
    <string name="btn_positive_cancel_trip">بله, لغو کن</string>
    <string name="btn_negative_cancel_trip">لغو نکن</string>
    <string name="tv_driver">راننده </string>
    <string name="tv_driver_name">محمد مسعود کامرانی گهرمان </string>
    <string name="tv_car">مدل خودرو </string>
    <string name="tv_car_model"> سمند سورن سفید</string>
    <string name="tv_cost">هزینه سفر </string>
    <string name="tv_money">999,000,000 ریال</string>
    <string name="reserve_trip_activity_title">رزرو سفر</string>
    <string name="tv_distance">مسافت </string>
    <string name="tv_number_distance">1500 کیلومتر</string>
    <string name="btn_reserve_trip">رزرو سفر</string>
    <string name="pay_money_alert_dialog_title">پرداخت و رزرو سفر!</string>
    <string name="tv_pay_type">نوع پرداخت را انتخاب کنید </string>
    <string name="btn_cash_pay">نقدی</string>
    <string name="btn_wallet_pay">کیف پول</string>
    <string name="btn_online_pay">آنلاین</string>
    <string name="tv_credit">اعتبار موجود : 0 ریال</string>
    <string name="tv_increase_credit">افزایش اعتبار </string>
    <string name="et_increase_credit">مبلغ افزایش را وارد کنید :</string>
    <string name="btn_increase_credit">پرداخت</string>
    <string name="btn_close_wallet">بستن</string>
    <string name="tv_time_doing_trips">زمان شروع سفر </string>
    <string name="trip_detail_activity_title">جزییات سفر</string>
    <string name="tv_cost_detail">مبلغ پرداختی </string>
    <string name="tv_pay_way_detail">روش پرداخت </string>
    <string name="tv_pay_type_detail">نقدی</string>
    <string name="tv_reduction_detail">تخفیف </string>
    <string name="tv_cost_all_trip_detail">هزینه کل سفر </string>
    <string name="tv_increase">افزایش اعتبار</string>
    <string name="tv_date_increase">تاریخ افزایش اعتبار</string>
    <string name="tv_cost_increase">مبلغ افزایش اعتبار</string>
    <string name="tv_decrease">کاهش اعتبار</string>
    <string name="tv_date_decrease">تاریخ کاهش اعتبار</string>
    <string name="tv_cost_decrease">مبلغ کاهش اعتبار</string>
    <string name="tv_cost_registered">هزینه سفر </string>
    <string name="passenger_profile_title">پروفایل</string>
    <string name="tv_mobile">موبایل </string>
    <string name="tv_have">دارد</string>
    <string name="tv_shipment_capacity">ظرفیت حمل بار</string>
    <string name="tv_cooler">کولر</string>
    <string name="tv_heater">بخاری</string>
    <string name="tv_chair_empty">تعداد صندلی خالی</string>
    <string name="tv_number">4</string>
    <string name="settings">تنظیمات</string>
    <string name="about_me">درباره ما</string>
    <string name="exit">خروج</string>
    <string name="stopping">نقاط توقف</string>
    <string name="stopping_points">ملایر</string>
    <string name="sign_up">عضویت</string>
    <string name="login">ورود</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="sexuality">جنسیت</string>
    <string name="mail">آدرس ایمیل</string>
    <string name="password">گذرواژه</string>
    <string name="mobile">شماره موبایل</string>
    <string name="bar_checkbox">بار همراه خود دارم</string>
    <string name="btn_send_to_insert_trip">ثبت مسیر</string>
    <string name="direction">مسیریابی</string>

</resources>
