<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/passenger_profile_title"
        android:icon="@drawable/profile"
        android:id="@+id/profile"/>

    <item
        android:title="@string/wallet_title"
        android:icon="@drawable/wallet"
        android:id="@+id/wallet" />

    <item
        android:title="@string/trips_title"
        android:icon="@drawable/trips"
        android:id="@+id/trips" />

    <item
        android:title="@string/transaction_title"
        android:icon="@drawable/receipt"
        android:id="@+id/transaction"/>

    <item
        android:title="@string/settings"
        android:icon="@drawable/settings"
        android:id="@+id/settings"/>

    <item
        android:title="@string/about_me"
        android:icon="@drawable/about_me"
        android:id="@+id/about_me"/>

    <item
        android:title="@string/exit"
        android:icon="@drawable/exit"
        android:id="@+id/exit"/>

</menu>