<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="6dp"
    android:background="@color/card_view_background"
    app:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_increase"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#4CAF50"
            android:gravity="center"
            android:text="@string/tv_increase"
            android:textColor="@color/textColorPrimary"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_date_increase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_date_increase"
            android:textColor="@color/text_view_in_registered_trip_recycler"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_cost_increase"
            app:layout_constraintEnd_toStartOf="@+id/tv_date_time_increase"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_increase" />

        <TextView
            android:id="@+id/tv_date_time_increase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/tv_date_movement"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_money_increase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_date_increase"
            app:layout_constraintTop_toBottomOf="@+id/tv_increase" />

        <TextView
            android:id="@+id/tv_cost_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_cost_increase"
            android:textColor="@color/text_view_in_registered_trip_recycler"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_money_increase"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_increase" />

        <TextView
            android:id="@+id/tv_money_increase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:gravity="start"
            android:text="@string/tv_money"
            android:textColor="@color/text_input_layout"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_cost_increase"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_time_increase" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>